# Book-agent

./: .gitignore  ChromaDB.py  README.md  alembic.ini  books_graph_agent.py  books_no_graph_agent.py  db_execute.py  emdeb_books.py  fake_db.py  graph.py  main.py  models.py  nodes.py  prompts.py  pyproject.toml  schema.py  settings.py  tools.py  utils.py
frontend/: nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: LoadingIndicator.tsx  ResponsePanel.tsx  SearchForm.tsx  index.ts
frontend/src/hooks/: useSearch.ts
frontend/src/types/: api.ts
migrations/: env.py
migrations/versions/: 4ce89281ee68_initial_migration.py  aae24524d013_add_author_in___repr__.py
